--- a/index.html
+++ b/index.html
@@ -256,45 +256,45 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>We Love Each Other</span>
 					<h2>Our Story</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p><i>"Tôi đã tìm thấy người mà lòng tôi yêu thương."</i> <br>Nhã Ca 3:4.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/anhnho1.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">December 25, 2015</span>
+									<h3 class="timeline-title">Chúa cho chúng con gặp nhau</h3>
+									<span class="date">Once upon a time</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Xuất phát điểm là tình bạn chung xóm kinh 6 nhỏ, hai đứa trẻ "oan gia" chỉ biết đến nhau qua những lần đi nhà thờ, nô đùa cùng đám bạn hay chọc ghẹo cãi nhau... Thời gian trôi qua, cả hai dần lớn lên và trưởng thành theo cách riêng, tình bạn thuở nhỏ cũng dần nhạt phai.</p>
 								</div>
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/anhnho22.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First Date</h3>
-									<span class="date">December 28, 2015</span>
+									<h3 class="timeline-title">Tình yêu được gieo mầm</h3>
+									<span class="date">April 19, 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Và rồi một ngày, Chúa thông qua hai bên gia đình kéo hai đứa trẻ ấy xích lại gần nhau. Cả hai bất ngờ xuất hiện lại trước mặt nhau và cũng bất ngờ thật sự trở thành một đôi.</p>
 								</div>
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/anhnho4.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">In A Relationship</h3>
-									<span class="date">January 1, 2016</span>
+									<h3 class="timeline-title">Phước lành hôn nhân</h3>
+									<span class="date">February 28, 2026</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Sau khoảng thời gian yêu xa, lần gặp lại nhau đầu tiên chính là ngày lễ đính hôn (January 31 2025).<br>Và hôm nay, Hữu Duy & Thi Ca chọn cùng nhau bước vào hành trình mới mang tên hôn nhân - nơi tình bạn thuở nhỏ ngày nào đã hoá thành tình yêu trọn đời.</p>
 								</div>
 							</div>
 						</li>
