--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hữu Duy &amp; Thi Ca - 20.10.2025</title>
+	<title>Hữu Duy &amp; Thi Ca - 28.02.2026</title>
+	<link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Chúng tôi sắp kết hôn - Ngày tổ chức là ngày 19 và 20 tháng 10 năm 2025 và chúng tôi muốn bạn tham gia." />
+	<meta name="description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025." />
 	<meta name="keywords" content="hữu duy,thi ca,wedding,website,rsvp" />
 	<meta name="author" content="Hữu Duy & Thi Ca" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
+	<!-- Open Graph -->
+	<meta property="og:title" content="Hữu Duy & Thi Ca - 28.02.2026">
+	<meta property="og:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025.">
+	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
+	<meta property="og:url" content="https://duyng219.github.io/wedding-w/">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Hữu Duy & Thi Ca">
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Hữu Duy & Thi Ca - 20.10.2025">
+	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025.">
+	<meta name="twitter:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
+	<!-- <meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
@@ -35,7 +36,7 @@
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="twitter:card" content="" /> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
