--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<title>Hữu Duy &amp; Thi Ca - 28.02.2026</title>
 	<link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025." />
+	<meta name="description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27 & 28/02/2026." />
 	<meta name="keywords" content="hữu duy,thi ca,wedding,website,rsvp" />
 	<meta name="author" content="Hữu Duy & Thi Ca" />
 
 	<!-- Open Graph -->
 	<meta property="og:title" content="Hữu Duy & Thi Ca - 28.02.2026">
-	<meta property="og:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025.">
+	<meta property="og:description" content="CChúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27 & 28/02/2026.">
 	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
 	<meta property="og:url" content="https://duyng219.github.io/wedding-w/">
 	<meta property="og:type" content="website">
@@ -23,8 +23,8 @@
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Hữu Duy & Thi Ca - 20.10.2025">
-	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 19 & 20/10/2025.">
+	<meta name="twitter:title" content="Hữu Duy & Thi Ca - 28.02.2026">
+	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27 & 28/02/2026.">
 	<meta name="twitter:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
 
   	<!-- Facebook and Twitter integration -->
