--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<meta property="og:title" content="Hữu Duy & Thi Ca - 28.02.2026">
 	<meta property="og:description" content="CChúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27 & 28/02/2026.">
 	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
+	<meta property="og:image:width" content="2400">
+	<meta property="og:image:height" content="1260">
 	<meta property="og:url" content="https://duyng219.github.io/wedding-w/">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Hữu Duy & Thi Ca">
