--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<title>Wedding Hữu Duy &amp; Thi Ca - 27&28.02.26</title>
 	<link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27&28.02.2026 (AL 11&12.01.2026)." />
+	<meta name="description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày đó." />
 	<meta name="keywords" content="hữu duy,thi ca,wedding,website,rsvp" />
 	<meta name="author" content="Hữu Duy & Thi Ca" />
 
 	<!-- Open Graph -->
 	<meta property="og:title" content="Wedding Hữu Duy &amp; Thi Ca - 27&28.02.26">
-	<meta property="og:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27&28.02.2026 (AL 11&12.01.2026).">
+	<meta property="og:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày đó.">
 	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
 	<meta property="og:image:width" content="2400">
 	<meta property="og:image:height" content="1260">
@@ -26,7 +26,7 @@
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Wedding Hữu Duy &amp; Thi Ca - 27&28.02.26">
-	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày 27&28.02.2026 (AL 11&12.01.2026).">
+	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày đó.">
 	<meta name="twitter:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
 
   	<!-- Facebook and Twitter integration -->
@@ -93,7 +93,7 @@
 						<li><a href="#fh5co-event">Location</a></li>
 						<li><a href="#fh5co-couple-story">Our Story</a></li>
 						
-						<li><a href="gifts.html">Gifts</a></li>
+						<li><a href="#fh5co-gift">Gifts</a></li>
 						<!-- <li class="has-dropdown">
 							<a href="services.html">Services</a>
 							<ul class="dropdown">
@@ -371,90 +371,11 @@
 								</div>
 							</a>
 						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>35 Photos</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
-							<a href="#" class="color-5">
-								<div class="case-studies-summary">
-									<span>90 Photos</span>
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-							<a href="#" class="color-6">
-								<div class="case-studies-summary">
-									<span>56 Photos</span>
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
-						</li>
 					</ul>		
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<!-- <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="display-t">
-					<div class="display-tc">
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-users"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Estimated Guest</span>
-
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-user"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">We Catter</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-calendar"></i>
-								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Events Done</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-clock"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Hours Spent</span>
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div id="fh5co-testimonial">
 		<div class="container">
@@ -510,61 +431,66 @@
 		</div>
 	</div>
 
-	<!-- <div id="fh5co-services" class="fh5co-section-gray">
+	<!-- Gift Section: Mừng cưới -->
+	<div id="fh5co-gift" class="fh5co-section-gray">
 		<div class="container">
-			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Offer Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<span>best gift</span>
+					<h2>Wedding Gift Box</h2>
+					<p>Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt như đám cưới của chúng tôi.</p>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-calendar"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>We Organized Events</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+				<!-- Bride card -->
+				<div class="col-md-6 col-sm-12">
+					<div class="panel panel-default animate-box" style="border-radius:12px;box-shadow:0 2px 12px #ccc;">
+						<div class="panel-heading text-center" style="background:none;">
+							<span style="font-size:18px;color:#828282;">Đến chú rể</span>
+						</div>
+						<div class="panel-body text-center">
+							<p class="text-muted" style="margin-bottom:4px;">Ngân hàng: <strong>Techcombank</strong></p>
+							<p class="text-muted" style="margin-bottom:12px;">Tên tài khoản: <strong>Nguyen Huu Duy</strong></p>
+							<div class="account-row" style="display:inline-flex;align-items:center;gap:10px;margin-bottom:14px;">
+								<label class="text-muted mb-0" style="font-weight:500;">Số tài khoản</label>
+								<input type="text" class="form-control" value="9610202196" id="acc-groom" readonly style="width:140px;text-align:center;border-radius:30px;height:40px;background-color:#fff;">
+								<button class="btn btn-default btn-sm" type="button" data-copy-target="#acc-groom" style="font-size:13px;padding:6px 14px;">Copy</button>
+							</div>
+							<div style="margin:10px 0;">
+								<a href="images/qr11.jpg" class="image-popup" title="QR mừng cưới chú rễ">
+									<img src="images/qr11.jpg" alt="QR chú rễ" style="max-width:180px;width:100%;height:auto;border-radius:8px;border:1px solid #eee;box-shadow:0 2px 8px #f3eae7;">
+								</a>
+							</div>
 						</div>
 					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-image"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Photoshoot</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-video"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Video Editing</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
 				</div>
 
-				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
+				<!-- Groom card -->
+				<div class="col-md-6 col-sm-12">
+					<div class="panel panel-default animate-box" style="border-radius:12px;box-shadow:0 2px 12px #ccc;">
+						<div class="panel-heading text-center" style="background:none;">
+							<span style="font-size:18px;color:#828282;">Đến cô dâu</span>
+						</div>
+						<div class="panel-body text-center">
+							<p class="text-muted" style="margin-bottom:4px;">Ngân hàng: <strong>SHB</strong></p>
+							<p class="text-muted" style="margin-bottom:12px;">Tên tài khoản: <strong>Nguyen Tran Hoang Thi Ca</strong></p>
+							<div class="account-row" style="display:inline-flex;align-items:center;gap:10px;margin-bottom:14px;">
+								<label class="text-muted mb-0" style="font-weight:500;">Số tài khoản</label>
+								<input type="text" class="form-control" value="1018002455" id="acc-bride" readonly style="width:140px;text-align:center;border-radius:30px;height:40px;background-color:#fff;">
+								<button class="btn btn-default btn-sm" type="button" data-copy-target="#acc-bride" style="font-size:13px;padding:6px 14px;">Copy</button>
+							</div>
+							<div style="margin:10px 0;">
+								<a href="images/qr2.jpg" class="image-popup" title="QR mừng cưới cô dâu">
+									<img src="images/qr2.jpg" alt="QR cô dâu" style="max-width:180px;width:100%;height:auto;border-radius:8px;border:1px solid #eee;box-shadow:0 2px 8px #f3eae7;">
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
-	</div> -->
-
+	</div>
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/thu.jpeg);">
 		<div class="overlay"></div>
