--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>We Love Each Other</span>
 					<h2>Our Story</h2>
-					<p><i>"Tôi đã tìm thấy người mà lòng tôi yêu thương."</i> <br>Nhã Ca 3:4.</p>
+					<p><i>"Tôi đã tìm thấy người mà lòng tôi yêu thương."</i> Nhã Ca 3:4.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -313,7 +313,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
 					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>“Tình yêu này là kết quả của đức tin, sự kiên nhẫn và những lời cầu nguyện.”</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -321,39 +321,39 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-						<a href="images/gallery-1.jpg">
-							<div class="case-studies-summary">
-								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-						<a href="#" class="color-2">
-							<div class="case-studies-summary">
-								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
-							</div>
-						</a>
-					</li>
+							<a href="images/gallery-1.jpg">
+								<div class="case-studies-summary">
+									<span>14 Photos</span>
+									<h2>Two Glas of Juice</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+							<a href="#" class="color-2">
+								<div class="case-studies-summary">
+									<span>30 Photos</span>
+									<h2>Timer starts now!</h2>
+								</div>
+							</a>
+						</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-						<a href="#" class="color-3">
-							<div class="case-studies-summary">
-								<span>90 Photos</span>
-								<h2>Beautiful sunset</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-						<a href="#" class="color-4">
-							<div class="case-studies-summary">
-								<span>12 Photos</span>
-								<h2>Company's Conference Room</h2>
-							</div>
-						</a>
-					</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+							<a href="#" class="color-3">
+								<div class="case-studies-summary">
+									<span>90 Photos</span>
+									<h2>Beautiful sunset</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+							<a href="#" class="color-4">
+								<div class="case-studies-summary">
+									<span>12 Photos</span>
+									<h2>Company's Conference Room</h2>
+								</div>
+							</a>
+						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
 							<a href="#" class="color-3">
@@ -377,7 +377,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-testimonial">
+	<!-- <div id="fh5co-testimonial">
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
@@ -429,7 +429,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- Gift Section: Mừng cưới -->
 	<div id="fh5co-gift" class="fh5co-section-gray">
@@ -438,14 +438,14 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>best gift</span>
 					<h2>Wedding Gift Box</h2>
-					<p>Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt như đám cưới của chúng tôi.</p>
+					<p>"Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt."</p>
 				</div>
 			</div>
 
 			<div class="row">
 				<!-- Bride card -->
 				<div class="col-md-6 col-sm-12">
-					<div class="panel panel-default animate-box" style="border-radius:12px;box-shadow:0 2px 12px #ccc;">
+					<div class="panel panel-default animate-box" style="border-radius:12px;">
 						<div class="panel-heading text-center" style="background:none;">
 							<span style="font-size:18px;color:#828282;">Đến chú rể</span>
 						</div>
@@ -468,7 +468,7 @@
 
 				<!-- Groom card -->
 				<div class="col-md-6 col-sm-12">
-					<div class="panel panel-default animate-box" style="border-radius:12px;box-shadow:0 2px 12px #ccc;">
+					<div class="panel panel-default animate-box" style="border-radius:12px;">
 						<div class="panel-heading text-center" style="background:none;">
 							<span style="font-size:18px;color:#828282;">Đến cô dâu</span>
 						</div>
