--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 	<div id="fh5co-gift" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-top: 1em;">
 					<span>best gift</span>
 					<h2>Wedding Gift Box</h2>
 					<p><i>"Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt."</i></p>
