--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@
 			<div><img src="images/gallery-16.jpg" alt="Ảnh 16"></div>
 			<div><img src="images/gallery-17.jpg" alt="Ảnh 17"></div>
 			<div><img src="images/gallery-18.jpg" alt="Ảnh 18"></div>
+			<div><img src="images/gallery-19.jpg" alt="Ảnh 18"></div>
+			<div><img src="images/gallery-20.jpg" alt="Ảnh 18"></div>
+			<div><img src="images/gallery-21.jpg" alt="Ảnh 18"></div>
+			<div><img src="images/gallery-22.jpg" alt="Ảnh 18"></div>
 			<!-- Thêm các ảnh khác -->
 			</div>
 		</div>
