--- a/index.html
+++ b/index.html
@@ -390,15 +390,15 @@
 			<div><img src="images/gallery-11.jpg" alt="Ảnh 11"></div>
 			<!-- <div><img src="images/gallery-12.jpg" alt="Ảnh 12"></div> -->
 			<div><img src="images/gallery-13.jpg" alt="Ảnh 13"></div>
-			<div><img src="images/gallery-14.jpg" alt="Ảnh 14"></div>
-			<div><img src="images/gallery-15.jpg" alt="Ảnh 15"></div>
+			<!-- <div><img src="images/gallery-14.jpg" alt="Ảnh 14"></div> -->
+			<!-- <div><img src="images/gallery-15.jpg" alt="Ảnh 15"></div> -->
 			<!-- <div><img src="images/gallery-16.jpg" alt="Ảnh 16"></div> -->
-			<div><img src="images/gallery-17.jpg" alt="Ảnh 17"></div>
-			<div><img src="images/gallery-18.jpg" alt="Ảnh 18"></div>
+			<!-- <div><img src="images/gallery-17.jpg" alt="Ảnh 17"></div> -->
+			<!-- <div><img src="images/gallery-18.jpg" alt="Ảnh 18"></div> -->
 			<!-- <div><img src="images/gallery-19.jpg" alt="Ảnh 19"></div> -->
-			<div><img src="images/gallery-20.jpg" alt="Ảnh 20"></div>
+			<!-- <div><img src="images/gallery-20.jpg" alt="Ảnh 20"></div> -->
 			<!-- <div><img src="images/gallery-21.jpg" alt="Ảnh 21"></div> -->
-			<div><img src="images/gallery-22.jpg" alt="Ảnh 22"></div>
+			<!-- <div><img src="images/gallery-22.jpg" alt="Ảnh 22"></div> -->
 			<!-- Thêm các ảnh khác -->
 			</div>
 		</div>
