--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-a.jpg); "> 
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>14 Photos</span> -->
@@ -330,7 +330,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-b.jpg); ">
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>12 Photos</span> -->
@@ -340,7 +340,7 @@
 						</li>
 
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-c.jpg); ">
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>22 Photos</span> -->
@@ -348,7 +348,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-d.jpg); ">
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>10 Photos</span> -->
@@ -357,7 +357,7 @@
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-e.jpg); ">
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>24 Photos</span> -->
@@ -365,7 +365,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-f.jpg); ">
 							<a href="#">
 								<div class="case-studies-summary">
 									<!-- <span>15 Photos</span> -->
@@ -383,22 +383,21 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div id="wedding-carousel" class="owl-carousel">
-			<div><img src="images/gallery-7.jpg" alt="Ảnh 7"></div>
-			<div><img src="images/gallery-8.jpg" alt="Ảnh 8"></div>
-			<div><img src="images/gallery-9.jpg" alt="Ảnh 9"></div>
-			<div><img src="images/gallery-10.jpg" alt="Ảnh 10"></div>
-			<div><img src="images/gallery-11.jpg" alt="Ảnh 11"></div>
-			<!-- <div><img src="images/gallery-12.jpg" alt="Ảnh 12"></div> -->
-			<div><img src="images/gallery-13.jpg" alt="Ảnh 13"></div>
-			<!-- <div><img src="images/gallery-14.jpg" alt="Ảnh 14"></div> -->
-			<!-- <div><img src="images/gallery-15.jpg" alt="Ảnh 15"></div> -->
-			<!-- <div><img src="images/gallery-16.jpg" alt="Ảnh 16"></div> -->
-			<!-- <div><img src="images/gallery-17.jpg" alt="Ảnh 17"></div> -->
-			<!-- <div><img src="images/gallery-18.jpg" alt="Ảnh 18"></div> -->
-			<!-- <div><img src="images/gallery-19.jpg" alt="Ảnh 19"></div> -->
-			<!-- <div><img src="images/gallery-20.jpg" alt="Ảnh 20"></div> -->
-			<!-- <div><img src="images/gallery-21.jpg" alt="Ảnh 21"></div> -->
-			<!-- <div><img src="images/gallery-22.jpg" alt="Ảnh 22"></div> -->
+			<div><img src="images/gallery-11.jpg" alt="Ảnh 7"></div>
+			<div><img src="images/gallery-22.jpg" alt="Ảnh 8"></div>
+			<div><img src="images/gallery-33.jpg" alt="Ảnh 9"></div>
+			<div><img src="images/gallery-44.jpg" alt="Ảnh 10"></div>
+			<div><img src="images/gallery-55.jpg" alt="Ảnh 11"></div>
+			<div><img src="images/gallery-66.jpg" alt="Ảnh 12"></div>
+			<div><img src="images/gallery-77.jpg" alt="Ảnh 13"></div>
+			<div><img src="images/gallery-88.jpg" alt="Ảnh 14"></div>
+			<div><img src="images/gallery-99.jpg" alt="Ảnh 15"></div>
+			<div><img src="images/gallery-1010.jpg" alt="Ảnh 16"></div>
+			<div><img src="images/gallery-1020.jpg" alt="Ảnh 17"></div>
+			<div><img src="images/gallery-1030.jpg" alt="Ảnh 18"></div>
+			<div><img src="images/gallery-1040.jpg" alt="Ảnh 19"></div>
+			<div><img src="images/gallery-1050.jpg" alt="Ảnh 20"></div>
+			<div><img src="images/gallery-1060.jpg" alt="Ảnh 22"></div>
 			<!-- Thêm các ảnh khác -->
 			</div>
 		</div>
