del file & modified link source

--- a/index.html
+++ b/index.html
@@ -558,9 +558,11 @@
 				<div class="col-md-12 text-center">
 					
 						<small class="block">&copy; 2025 Duy Nguyen</small> 
-						<small class="block">View source code in Github
-						<a href="https://github.com/duyng219/wedding-w"><i class="icon-github"></i></a>
-						</small> 
+						<a href="https://github.com/duyng219/wedding-w">
+							<small class="block">View source code in Github
+								<i class="icon-github"></i>
+							</small> 
+						</a>
 					<!-- <p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
