--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 	<!-- Open Graph -->
 	<meta property="og:title" content="Wedding Hữu Duy &amp; Thi Ca - 27&28.02.26">
 	<meta property="og:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày đó.">
-	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
+	<meta property="og:image" content="https://duyng219.github.io/wedding-w/images/thumbnail-1.jpg">
 	<meta property="og:image:width" content="2400">
 	<meta property="og:image:height" content="1260">
 	<meta property="og:url" content="https://duyng219.github.io/wedding-w/">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Hữu Duy & Thi Ca">
+	<meta property="og:locale" content="vi_VN">
+	<meta property="fb:app_id" content="966242223397117">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Wedding Hữu Duy &amp; Thi Ca - 27&28.02.26">
 	<meta name="twitter:description" content="Chúng mình sắp bước sang một hành trình mới cùng nhau, và thật tuyệt vời nếu bạn có mặt để chia sẻ niềm vui này vào ngày đó.">
-	<meta name="twitter:image" content="https://duyng219.github.io/wedding-w/images/thumbnail.jpg">
+	<meta name="twitter:image" content="https://duyng219.github.io/wedding-w/images/thumbnail-1.jpg">
 
   	<!-- Facebook and Twitter integration -->
 	<!-- <meta property="og:title" content=""/>
@@ -397,6 +399,7 @@
 			<div><img src="images/gallery-1030.jpg" alt="Ảnh 18"></div>
 			<div><img src="images/gallery-1040.jpg" alt="Ảnh 19"></div>
 			<div><img src="images/gallery-1050.jpg" alt="Ảnh 20"></div>
+			<div><img src="images/gallery-1070.jpg" alt="Ảnh 23"></div>
 			<div><img src="images/gallery-1060.jpg" alt="Ảnh 22"></div>
 			<!-- Thêm các ảnh khác -->
 			</div>
